products/static/products/base.css
:root {
    --lightblue: #d4f1f4;
    --majesticblue: #75e6da;
    --bluegrotto: #189ab4;
    --navyblue: #05445e;
}

.text-lightblue {
    color: var(--lightblue);
}

.text-bg-majesticblue {
    color: #fff;
    background-color: var(--majesticblue);
}

.text-navyblue {
    color: var(--navyblue) !important;
}

.text-bluegrotto {
    color: var(--bluegrotto) !important;
}

a:hover {
    text-decoration: underline
}

a.nav-link:hover,
a.btn:hover {
    text-decoration: none
}

a {
    outline: none !important;
    text-decoration: none;
}

.bg-lightblue {
    background-color: var(--lightblue);
}

.bg-majesticblue {
    background-color: var(--majesticblue);
}

.bg-bluegrotto {
    background-color: var(--bluegrotto);
}

.bg-navyblue {
    background-color: var(--navyblue);
}

.btn-outline-navyblue {
    --bs-btn-color: var(--navyblue);
    --bs-btn-border-color: var(--navyblue);
    --bs-btn-hover-color: #fff;
    --bs-btn-hover-bg: var(--navyblue);
    --bs-btn-hover-border-color: var(--navyblue);
    --bs-btn-focus-shadow-rgb: 25, 135, 84;
    --bs-btn-active-color: #fff;
    --bs-btn-active-bg: var(--navyblue);
    --bs-btn-active-border-color: var(--navyblue);
    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
    --bs-btn-disabled-color: var(--navyblue);
    --bs-btn-disabled-bg: transparent;
    --bs-btn-disabled-border-color: var(--navyblue);
    --bs-gradient: none;
}

.btn-outline-lightblue {
    --bs-btn-color: var(--lightblue);
    --bs-btn-border-color: var(--lightblue);
    --bs-btn-hover-color: var(--navyblue);
    --bs-btn-hover-bg: var(--lightblue);
    --bs-btn-hover-border-color: var(--lightblue);
    --bs-btn-focus-shadow-rgb: 25, 135, 84;
    --bs-btn-active-color: #fff;
    --bs-btn-active-bg: var(--lightblue);
    --bs-btn-active-border-color: var(--lightblue);
    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
    --bs-btn-disabled-color: var(--lightblue);
    --bs-btn-disabled-bg: transparent;
    --bs-btn-disabled-border-color: var(--lightblue);
    --bs-gradient: none;
}

.btn-outline-bluegrotto {
    --bs-btn-color: var(--bluegrotto);
    --bs-btn-border-color: var(--bluegrotto);
    --bs-btn-hover-color: #fff;
    --bs-btn-hover-bg: var(--bluegrotto);
    --bs-btn-hover-border-color: var(--bluegrotto);
    --bs-btn-focus-shadow-rgb: 25, 135, 84;
    --bs-btn-active-color: #fff;
    --bs-btn-active-bg: var(--bluegrotto);
    --bs-btn-active-border-color: var(--bluegrotto);
    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
    --bs-btn-disabled-color: var(--bluegrotto);
    --bs-btn-disabled-bg: transparent;
    --bs-btn-disabled-border-color: var(--bluegrotto);
    --bs-gradient: none;
}

.brightness-50 {
    filter: brightness(0.1);
}

.btn-bluegrotto {
    --bs-btn-color: #fff;
    --bs-btn-bg: var(--bluegrotto);
    --bs-btn-border-color: var(--bluegrotto);
    --bs-btn-hover-color: #fff;
    --bs-btn-hover-bg: #188da4;
    --bs-btn-hover-border-color: #2992a7;
    --bs-btn-focus-shadow-rgb: 49, 132, 253;
    --bs-btn-active-color: #fff;
    --bs-btn-active-bg: #2992a7;
    --bs-btn-active-border-color: #45a2b4;
    --bs-btn-active-shadow: inset 0 3px 5px #2fb5d0;
    --bs-btn-disabled-color: #fff;
    --bs-btn-disabled-bg: var(--bluegrotto);
    --bs-btn-disabled-border-color: var(--bluegrotto);
}

.btn-navyblue {
    --bs-btn-color: #fff;
    --bs-btn-bg: var(--navyblue);
    --bs-btn-border-color: var(--navyblue);
    --bs-btn-hover-color: #fff;
    --bs-btn-hover-bg: #2280a9;
    --bs-btn-hover-border-color: #98d9f7;
    --bs-btn-focus-shadow-rgb: 49, 132, 253;
    --bs-btn-active-color: #fff;
    --bs-btn-active-bg: #2992a7;
    --bs-btn-active-border-color: #45a2b4;
    --bs-btn-active-shadow: inset 0 3px 5px #2fb5d0;
    --bs-btn-disabled-color: #fff;
    --bs-btn-disabled-bg: var(--navyblue);
    --bs-btn-disabled-border-color: var(--navyblue);
}

.carousel-crop {
    width: 100%;
    height: 500px;
    object-fit: cover;
    object-position: top;
}

.cover-img-crop {
    width: 100%;
    height: 750px;
    object-fit: cover;
    object-position: center;
}

.team-img-crop {
    width: 150px;
    height: 250px;
    object-fit: cover;
    object-position: center;
}

.contact-img-crop {
    width: 100%;
    height: 1050px;
    object-fit: cover;
    object-position: top;
}

.catalog-img-crop {
    width: 100%;
    height: 200px;
    object-fit: cover;
    object-position: top;
}

.catalog-card-crop {
    width: 100%;
    height: 300px;
    object-fit: cover;
    object-position: center;
}

.detail-product-crop {
    width: 100%;
    height: 500px;
    object-fit: cover;
    object-position: center;
}

.similar-product-crop {
    width: 100%;
    height: 250px;
    object-fit: cover;
    object-position: center;
}

.about-img-crop {
    width: 100%;
    height: 500px;
    object-fit: cover;
    object-position: center;
}

